[package]
name = "wrake"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
select = "0.5.0"
regex = "1.5.4"
lazy_static = "1.4.0"
rayon = "1.5.1"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "color"]
